samples/_failures_safe/1761488629_648b2c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_12596a30.c: In function ‘main’:
./samples/SAFE/__tmp_12596a30.c:105:5: error: expected declaration or statement at end of input
  105 |     printf("Matrix Operations Demo\n");
      |     ^~~~~~
